--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ map.use[List[Tile]]</code></pre>
            indicative of anything. We have a <strong>legend</strong>,
            though.</p>
 
-        <pre><code class="scala">val legend = retrieve("legend").head</code></pre>
+        <pre><code class="scala">val legend = retrieve("map legend").head</code></pre>
 
         <p>Let's try using it with our map.</p>
 
