add fork ribbon

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     </style>
 </head>
 <body>
+    <a href="https://github.com/rfw/legend-of-scala"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
     <header>
         <img src="logo.png" title="The Legend of Scala" alt="The Legend of Scala">
     </header>
