--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<!--Refresh Damn You!!-->
 <head>
     <title>The Legend of Scala</title>
     <script src="highlight.pack.js"></script>
